fix url path identification for breadcrumbs links to work outstide local environment. Remove some vertical spacing to bring page content higher.

--- a/ArgusWeb/app/css/main.css
+++ b/ArgusWeb/app/css/main.css
@@ -17,20 +17,17 @@
  * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
  * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
  * EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. */
-body {
-    /* min-height: 2000px; */
-    padding-top: 70px;
-}
+body {padding-top: 65px;}
 
 label {
     display: inline-block;
     padding-top: 5px;
 }
 
-.breadcrumb {display:inline-block;}
+.breadcrumb {display:inline-block; margin-bottom:0; padding:5px 15px;}
 .breadcrumb > li + li:before {display:none;}
 
-.nav {margin-top: 10px; margin-bottom: 10px;}
+.nav {margin-top: 10px; margin-bottom: 15px;}
 .navbar-fixed-top .nav {margin-top: 0; margin-bottom: 0;}
 .h3 {margin-top: 10px;}
 
